--- a/FirstTute/client/src/App.css
+++ b/FirstTute/client/src/App.css
@@ -32,25 +32,67 @@
   height: 80vh;
   width: 60%;
   margin: auto;
- margin-top: 20px;
+  margin-top: 20px;
   
+}
+.message_container{
+  overflow-y: scroll;
+  height: 90%;
+}
+.message_container::-webkit-scrollbar {
+  display: none;
 }
 .messageBox{
   position: absolute;
   bottom: 0;
   display: flex;
   width: 100%;
-
+  height: 10%;
 }
 .messageBox>input{
   width: 90%;
-  height: 30px;
+  height: 100%;
   outline: none;
 }
 .messageBox>button{
   width: 10%;
-  height: 40px;
+  height: 100%;
   background-color: rgb(34, 117, 241);
   color: #fff;
   outline: nones;
+}
+.text{
+  border: 2px solid lightblue;
+  width: 50%;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 5px;
+  overflow-wrap: break-word;
+  word-break: break-all;
+}
+
+#mine{
+  float: right;
+  background-color: rgb(52, 129, 230);
+}
+#others{
+  float: left;
+  background-color: rgb(5, 189, 5);
+}
+
+.message_text{
+  color: #fff;
+  font-size: 20px;
+}
+.message_time{
+  color: #fff;
+  font-size: 15px;
+}
+
+.scroller{
+  height: 100%;
+}
+
+.scroller::-webkit-scrollbar{
+  width: 5px;
 }
