--- a/Third/client/src/App.css
+++ b/Third/client/src/App.css
@@ -7,9 +7,10 @@
 }
 .app_chatApp{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 80vh;
+
 }
 .app>input{
     height: 50px;
